<resources>

    <string name="hello_world">Hello world!</string>
    
    <string name="action_search">Search address (&#8320;)</string>
    
    <string name="menu_settings">Settings</string>
    
    <string name="name_format_error">"Your name is too short O_o"</string>
    
    <string name="email_format_error">"INVALIDE E-mail !!"</string>
    
    <string name="username_format_error">"The login is too short !!"</string>
	
	<string name="password_format_error">"The password is too short !! (6characters minimum)"</string>
	
	<string name="email_or_password_empty">"ERROR : INVALIDE Login"</string>
	
	<string name="data_rec">Data received</string>
	
	<string name="Status">Data : </string>
	
	<string name="empty">"ERROR : you must complete the entire form"</string>
	
	<string name="app_name">Find Your Destination</string>
	
	<string name="title_activity_main"> Connexion </string>
    
    <string name="welcome">Welcome to "Find Your Destination" </string>
    
    <string name="title_activity_login_display"> Subscribe </string>
    
    <string name="name">Full name   :</string>
    
    <string name="hint_name">Your full name &#8230;</string>
	
    <string name="username">Username :</string>
    
    <string name="hint_username">"Username &#8230;"</string>
    
    <string name="password">Password :</string>
    
    <string name="hint_pass">"Your Password &#8230;"</string>
    
    <string name="email">Your E-mail :</string>
    
    <string name="hint_mail">"Your E-mail &#8230;"</string>
    
    <string name="SignIn">Sign In</string>
    
    <string name="join">Join us </string>
    
    <string name="logout">Logout </string>
    
    <string name="sub"> Subscribe </string>
    
    <string name="add">Add  </string>
    
    <string name="del">Delete </string>
    
    <string name="modify">Update </string>
    
    <string name="title_activity_mydestination_display"> My Destinations </string>
    
    <string name="title">Title :</string>
    
    <string name="hint_title">Title </string>
    
    <string name="adresse">Adresse :</string>
    
    <string name="hint_adresse">Adresse </string>
    
    <string name="category">Category :</string>
    
    <string name="item1">To visit </string>
    
    <string name="item2">i have been here </string>
    
    <string name="item3">never go over there </string>
    
    <string name="hint">Long click on the map to add to "My Destinations" </string>
    
    <string name="cnl">Cancel </string>
    
    <string name="search"> Search </string>
    
    <string name="show"> Show map </string>
    
</resources>