<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    android:gravity="center"
    android:orientation="vertical" >
			
  <TextView
      android:id="@+id/tvTitle"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:text="@string/title"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
      		
  <EditText
      android:id="@+id/etTitle"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:hint="@string/hint_title"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <TextView
      android:id="@+id/tvAdresse"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:text="@string/adresse"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etAdresse"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:hint="@string/hint_adresse"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />

  <TextView
      android:id="@+id/tvCategory"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:text="@string/category"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etCategory"
      style="@style/AppTheme"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_marginTop="12dp"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <Button
      android:id="@+id/addAdresse"
      android:layout_width="310dp"
      android:layout_height="68dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="3dp"
      android:layout_marginTop="38dp"
      android:background="@drawable/btn_blue_back"
      android:textColor="#FF0"
      android:text="@string/add"
      android:textSize="23sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <Button
      android:id="@+id/cancel"
      android:layout_width="310dp"
      android:layout_height="68dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="3dp"
      android:background="@drawable/btn_blue_back"
      android:textColor="#FF0"
      android:text="@string/cnl"
      android:textSize="23sp"
      android:textStyle="bold"
      android:typeface="serif" />
    

</LinearLayout>