<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   		 	android:layout_width="match_parent"
            android:background="@drawable/background"
    		android:layout_height="match_parent" >

<ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
      
  <TextView
      android:id="@+id/sub"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="39dp"
      android:text="@string/sub"
      android:textColor="#0A0661"
      android:textSize="31sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginTop="33dp" >
			
  <TextView
      android:id="@+id/tvName"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etName"
      android:text="@string/name"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
      		
  <EditText
      android:id="@+id/etName"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_marginTop="18dp"
      android:layout_toRightOf="@+id/tvName"
      android:hint="@string/hint_name"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <TextView
      android:id="@+id/tvEmail"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etEmail"
      android:layout_below="@+id/tvName"
      android:text="@string/email"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etEmail"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_below="@+id/etName"
      android:layout_toRightOf="@+id/tvEmail"
      android:hint="@string/hint_mail"
      android:inputType="textEmailAddress"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <TextView
      android:id="@+id/tvUsername"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etUsername"
      android:layout_below="@+id/tvEmail"
      android:text="@string/username"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etUsername"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_below="@+id/etEmail"
      android:layout_toRightOf="@+id/tvUsername"
      android:hint="@string/hint_username"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <TextView
      android:id="@+id/tvpass"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etpass"
      android:layout_below="@+id/tvUsername"
      android:text="@string/password"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etpass"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_below="@+id/etUsername"
      android:layout_toRightOf="@+id/tvpass"
      android:hint="@string/hint_pass"
      android:inputType="textPassword"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="normal" />
  
  </RelativeLayout>
  
  <Button
      android:id="@+id/join"
      android:layout_width="130dp"
      android:layout_height="68dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="3dp"
      android:layout_marginTop="38dp"
      android:text="@string/join"
      android:background="@drawable/btn_blue_back"
      android:textColor="#FF0"
      android:textSize="23sp"
      android:textStyle="bold"
      android:onClick="notify"
      android:typeface="serif" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>