<?xml version="1.0" encoding="utf-8"?>
  
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    	android:background="@drawable/test"
    	android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
  
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginTop="20dp" >
			
  <TextView
      android:id="@+id/tvTitle"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etTitle"
      android:text="@string/title"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
      		
  <EditText
      android:id="@+id/etTitle"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_marginTop="18dp"
      android:layout_toRightOf="@+id/tvTitle"
      android:hint="@string/hint_title"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  <TextView
      android:id="@+id/tvAdresse"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignBaseline="@+id/etAdresse"
      android:layout_below="@+id/tvTitle"
      android:text="@string/adresse"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etAdresse"
      android:layout_width="170dp"
      android:layout_height="41dp"
      android:layout_below="@+id/etTitle"
      android:layout_toRightOf="@+id/tvAdresse"
      android:hint="@string/hint_adresse"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />

  <TextView
      android:id="@+id/tvCategory"
      android:layout_width="128dp"
      android:layout_height="25dp"
      android:layout_alignParentBottom="true"
      android:layout_below="@id/tvAdresse"
      android:text="@string/category"
      android:textColor="@color/black_color"
      android:textSize="19sp"
      android:textStyle="bold"
      android:typeface="serif" />
  
  <EditText
      android:id="@+id/etCategory"
      android:layout_width="170dp"
      android:layout_height="33dp"
      android:layout_below="@+id/etAdresse"
      android:layout_toRightOf="@+id/tvCategory"
      android:hint="@string/category"
      android:textColor="@color/black_color"
      android:textSize="16sp"
      android:textStyle="italic|bold"
      android:typeface="serif" />
  
  </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="124dp"
    android:layout_gravity="bottom"
    android:gravity="center" >

   <Button
       android:id="@+id/deleteAdresse"
       android:layout_width="110dp"
       android:layout_height="37dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:text="@string/del"
       android:background="@drawable/btn_blue_back"
       android:textColor="#FF0"
       android:textSize="23sp"
       android:textStyle="bold"
       android:typeface="serif" />

   <Button
       android:id="@+id/updateAdresse"
       android:layout_width="110dp"
       android:layout_height="37dp"
       android:layout_alignParentTop="true"
       android:layout_above="@+id/cancel"
       android:layout_toRightOf="@+id/deleteAdresse"
       android:text="@string/modify"
       android:background="@drawable/btn_blue_back"
       android:textColor="#FF0"
       android:textSize="23sp"
       android:textStyle="bold"
       android:typeface="serif" />
   
    <Button
       android:id="@+id/showAdresse"
       android:layout_width="110dp"
       android:layout_height="37dp"
       android:layout_below="@+id/deleteAdresse"
       android:layout_toLeftOf="@+id/cancel"
       android:text="@string/show"
       android:background="@drawable/btn_blue_back"
       android:textColor="#FF0"
       android:textSize="23sp"
       android:textStyle="bold"
       android:typeface="serif" />

   <Button
       android:id="@+id/cancel"
       android:layout_width="110dp"
       android:layout_height="37dp"
       android:layout_alignBaseline="@+id/showAdresse"
       android:layout_alignBottom="@+id/showAdresse"
       android:layout_alignLeft="@+id/updateAdresse"
       android:text="@string/cnl"
       android:background="@drawable/btn_blue_back"
       android:textColor="#FF0"
       android:textSize="23sp"
       android:textStyle="bold"
       android:typeface="serif" />

   </RelativeLayout>
    </LinearLayout>
    </ScrollView>
