<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
      android:background="@drawable/background"
    android:layout_height="match_parent" >

<ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#0A0661"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/username"
        android:textColor="@color/black_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/username"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:typeface="serif" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-8dp"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/password"
        android:textColor="@color/black_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/connect"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/btn_blue_back"
        android:textColor="#FF0"
        android:text="@string/SignIn"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="serif" />
    
    <Button
        android:id="@+id/join"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_blue_back"
        android:textColor="#FF0"
        android:text="@string/join"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>
</ScrollView>
</LinearLayout>