<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/logout"
                android:layout_width="100dp"
                android:layout_height="33dp"
                android:layout_gravity="right"
                android:background="@drawable/btn_blue_back"
                android:minHeight="48dp"
                android:text="@string/logout"
                android:textColor="#FF0"
                android:textSize="19sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/desti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="9dp"
                android:gravity="center_horizontal"
                android:text="@string/title_activity_mydestination_display"
                android:textColor="#0A0661"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TableLayout
                android:id="@+id/table_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:stretchColumns="0,1,2"
                android:background="@drawable/tablegrid"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_margin="2dp" >

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/hint_title"
                        android:textColor="#FF0000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:gravity="center"
                        android:clickable="true"
                        android:text="@string/hint_adresse"
                        android:textColor="#FF0000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:gravity="center"
                        android:clickable="true"
                        android:text="@string/category"
                        android:textColor="#FF0000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                </TableRow>
            </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_weight="0.04" >

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:minHeight="48dp"
            android:layout_marginRight="3dp"
            android:text="@string/add"
        	android:background="@drawable/btn_blue_back"
        	android:textColor="#FF0"
            android:textSize="19sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/show"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/add"
            android:minHeight="48dp"
            android:text="@string/show"
	        android:background="@drawable/btn_blue_back"
	        android:textColor="#FF0"
            android:textSize="19sp"
            android:textStyle="bold"
            android:typeface="serif" />
        

    </RelativeLayout>
</LinearLayout>
    </ScrollView>

</LinearLayout>